--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,9 @@
     <title>Dark Souls III: The Fire Fades Edition</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="/public/img/darksouls-logo.png" alt="Logo do Jogo" class="imgHeader">
+    </header>
     <main>
     </main>
 </body>
